--- a/style.css
+++ b/style.css
@@ -1,20 +1,18 @@
 .timer{
-  position: fixed; 
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 150px;
+  font-size: 50px;
 }
 body{
   font-family: 'Bitter', serif;
-
+  text-align: center;
 }
 h1{
-	margin-top: 150px;
 	text-align: center;
 	font-size: 50px;
 }
 h2{
 	text-align: center;
 	margin-top: 50px;
+}
+h3{
+	font-size: 30px;
 }
