--- a/style.css
+++ b/style.css
@@ -30,3 +30,8 @@ h3{
 	margin: 50px; 
 	
 }
+
+a:link { color: #000000; text-decoration: none}
+a:visited { color: #000000; text-decoration: none}
+a:hover { color: #000000; text-decoration: none}
+a:active { color: #000000; text-decoration: none}
