--- a/mtimer-style.css
+++ b/mtimer-style.css
@@ -1,33 +1,37 @@
-
-body{
-	font-family: 'Didact Gothic', sans-serif;
-	background-color: #2ab7ea;
-
-}
-h1{
-	font-size: 7vmin;
-	font-weight: normal;
-}
-h2{
-	margin-top: 1vmin;
-	font-weight: normal;
+body {
+  font-family: "Didact Gothic", sans-serif;
+  background-color: #2ab7ea;
+  text-align: center;
 }
 
-
-.timer{
-	  font-size: 18vmin;
+h1 {
+  font-size: 7vmin;
+  font-weight: normal;
 }
 
-.stats{
-	margin-top: 0;
-	margin-bottom: 0;
-	}
-.blank-space{
-	display: block;
-	margin: 50px; 
+h2 {
+  margin-top: 1vmin;
+  font-weight: normal;
 }
 
-a:link { color: #000000; text-decoration: none}
-a:visited { color: #000000; text-decoration: none}
-a:hover { color: #000000; text-decoration: none}
-a:active { color: #000000; text-decoration: none}
+.timer {
+  font-size: 18vmin;
+}
+
+.stats {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.blank-space {
+  display: block;
+  margin: 50px;
+}
+
+a:link,
+a:visited,
+a:hover,
+a:active {
+  color: #000000;
+  text-decoration: none;
+}
