--- a/pop-up-style.css
+++ b/pop-up-style.css
@@ -1,42 +1,49 @@
-body{
-	font-family: 'Didact Gothic', sans-serif;
-	background-color: #2ab7ea;
-
-}
-h1{
-	font-size: 25px;
-	font-weight: normal;
-}
-h2{
-	margin-top: 50px;
-	font-weight: normal;
+body {
+  font-family: "Didact Gothic", sans-serif;
+  background-color: #2ab7ea;
 }
 
+h1 {
+  font-size: 25px;
+  font-weight: normal;
+}
 
-.timer{
-	  font-size: 50px;
+h2 {
+  margin-top: 50px;
+  font-weight: normal;
 }
-.fullVersionButton{
-	border-style: solid;
-	border-color: black;
-	height:50px ;
-	width: 100px;
+
+.timer {
+  font-size: 50px;
 }
-.stats{
-	margin-top: 0;
-	margin-bottom: 0;
+
+.fullVersionButton {
+  border-style: solid;
+  border-color: black;
+  height: 50px;
+  width: 100px;
 }
-.blank-space{
-	display: block;
-	margin: 50px; 
-	
+
+.stats {
+  margin-top: 0;
+  margin-bottom: 0;
 }
-.parent{
-	text-align: center;
-	width: 100px;
-	height: 100px;
+
+.blank-space {
+  display: block;
+  margin: 50px;
 }
-a:link { color: #000000; text-decoration: none}
-a:visited { color: #000000; text-decoration: none}
-a:hover { color: #000000; text-decoration: none}
-a:active { color: #000000; text-decoration: none}
+
+.parent {
+  text-align: center;
+  width: 100px;
+  height: 100px;
+}
+
+a:link,
+a:visited,
+a:hover,
+a:active {
+  color: #000000;
+  text-decoration: none;
+}
